deformation/jitfailure-dolfin_expression_7f5201f76ff366c462489a37001eb061/error.log
/tmp/tmp5o6c5igl/dolfin_expression_7f5201f76ff366c462489a37001eb061.cpp: In member function ‘virtual void dolfin::dolfin_expression_7f5201f76ff366c462489a37001eb061::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmp5o6c5igl/dolfin_expression_7f5201f76ff366c462489a37001eb061.cpp:64:32: error: ‘L1’ was not declared in this scope
           values[1] = x[1]+(Lt-L1);
                                ^~
/tmp/tmp5o6c5igl/dolfin_expression_7f5201f76ff366c462489a37001eb061.cpp:64:32: note: suggested alternative: ‘Lt’
           values[1] = x[1]+(Lt-L1);
                                ^~
                                Lt
/tmp/tmp5o6c5igl/dolfin_expression_7f5201f76ff366c462489a37001eb061.cpp: In member function ‘virtual double dolfin::dolfin_expression_7f5201f76ff366c462489a37001eb061::get_property(std::__cxx11::string) const’:
/tmp/tmp5o6c5igl/dolfin_expression_7f5201f76ff366c462489a37001eb061.cpp:76:11: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
           if (name == "delta_t") return delta_t;          if (name == "Lt") return Lt;
           ^~
/tmp/tmp5o6c5igl/dolfin_expression_7f5201f76ff366c462489a37001eb061.cpp:76:59: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
           if (name == "delta_t") return delta_t;          if (name == "Lt") return Lt;
                                                           ^~
